# Alpha-Life-Engine

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLOUDFLARE_CHECKLIST.md  FILES_INVENTORY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP_GUIDE.md  TODO.md  diff.txt  diff_review.txt  eslint.config.js  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tsconfig.json  vite.config.ts  worker-configuration.d.ts  wrangler.toml
.github/: dependabot.yml
.github/workflows/: ci-verify.yml  daily-market-update.yml
database/: migrate.ts  schema.sql  seed.ts
docs/: API.md  ARCHITECTURE.md  DATABASE.md  DEPLOYMENT.md  EVOLVER.md
functions/api/: [[route]].ts  auth.ts  lch-utils.ts  market-data.ts  portfolio.ts  strategy.ts  transaction.ts  trigger.ts
functions/portfolio/: index.ts
functions/trigger/: index.ts
scripts/: bao-stock-setup.ts  daily-market-update.ts  start-dev.bat  start-dev.sh  tsconfig.json
scripts/local-evolver/: config.py  config.yaml  cpcv.py  data.py  dsr.py  evolver.py  models.py  monitoring.py  monte_carlo.py  mpt.py  regime.py  report.py  requirements.txt  risk.py  sensitivity.py  stability.py  synthetic.py  walk_forward.py
scripts/local-evolver/tests/: conftest.py  test_config.py  test_cpcv.py  test_dsr.py  test_dsr_extras.py  test_models.py  test_monitoring.py  test_monte_carlo.py  test_mpt.py  test_regime.py  test_report.py  test_risk.py  test_sensitivity.py  test_stability.py  test_synthetic.py  test_walk_forward.py
scripts/local_evolver/: api_client.py  config.py  config.yaml  constants.py  cpcv.py  dsr.py  evolver.py  models.py  monitoring.py  monte_carlo.py  mpt.py  regime.py  report.py  requirements.txt  risk.py  sensitivity.py  stability.py  synthetic.py  walk_forward.py
scripts/local_evolver/tests/: conftest.py  test_config.py  test_cpcv.py  test_dsr.py  test_dsr_extras.py  test_models.py  test_monitoring.py  test_monte_carlo.py  test_mpt.py  test_regime.py  test_report.py  test_risk.py  test_sensitivity.py  test_stability.py  test_synthetic.py  test_walk_forward.py
src/: App.tsx  index.css  main.tsx
src/api/: portfolio.ts  transaction.ts  trigger.ts
src/components/: PositionsList.tsx  RecentTransactions.tsx  StrategyEvolutionBar.tsx  TransactionForm.tsx  TriggerProgress.tsx
src/hooks/: useActiveAllocation.ts  useAuth.ts  usePortfolio.ts
src/lib/: auth.ts  database.ts  lch-allocation.ts  lch-constants.ts  trigger-engine.ts  types.ts
src/lib/strategy-evolver/: cpcv.ts  dsr.ts  index.ts  monte-carlo.ts  mpt.ts  report-generator.ts  stability.ts  types.ts  walk-forward.ts
src/lib/strategy-evolver/__tests__/: dsr.test.ts  monte-carlo.test.ts
src/pages/: Dashboard.tsx  Login.tsx  Settings.tsx
src/types/: api.ts
